@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-23T16:23:15Z",
-  "count_outdated" : 112,
-  "uniques_outdated" : 76,
-  "count" : 115,
-  "uniques" : 78,
+  "timestamp" : "2022-08-24T01:51:45Z",
+  "count_outdated" : 117,
+  "uniques_outdated" : 80,
+  "count" : 119,
+  "uniques" : 81,
   "clones" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ]
-    },
     {
       "timestamp": "2022-08-18T00:00:00Z",
       "count": 2,
